@@ -1,5 +1,5 @@
 name        = NetPacket
-version     = 1.0.0
+version     = 1.0.1
 author      = Yanick Champoux <yanick@cpan.org>
 license     = Artistic_2_0
 copyright_holder = Yanick Champoux
